<resources>
    <string name="app_name">App Base Res</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="text_agree">Agree&#160;</string>
    <string name="text_split_privacy_service">&#160;&amp;&#160;</string>
    <string name="text_split_point">&#160;·&#160;</string>

    <string name="toast_no_mic_perm">No microphone permission</string>
    <string name="toast_no_flash_perm">No flash permission</string>
    <string name="toast_rated">You have already rated us</string>
    <string name="toast_succeed">Succeed</string>
    <string name="toast_error">Error</string>
    <string name="toast_failed">Failed</string>
    <string name="text_started">Start</string>
    <string name="text_home">Home</string>
    <string name="text_alarm">Alarm</string>
    <string name="text_tool">Tool</string>
    <string name="text_setting">Setting</string>

    <string name="text_do_not_touch_my_phone">Don\'t touch my phone</string>
    <string name="text_guide_title_1">Clap</string>
    <string name="text_guide_title_2">Flash</string>
    <string name="text_guide_title_3">Various effects</string>
    <string name="text_guide_title_4">Try it out!</string>
    <string name="text_guide_desc_1">to find where is your phone</string>
    <string name="text_guide_desc_2">to make you see easily in the dark</string>
    <string name="text_guide_desc_3">to make your phone easy to find</string>
    <string name="text_guide_desc_4">Start your journey now</string>
    <string name="text_tab_home">Home</string>
    <string name="text_tab_tool">Tool</string>
    <string name="text_tab_setting">Setting</string>
    <string name="text_next">Next</string>
    <string name="text_start_small">Start</string>
    <string name="text_got_it">Got it</string>
    <string name="tv_rate_title">We are glad to hear more comments and suggestions from you! Please rate us and leave your feedback!</string>
    <string name="tv_rate_desc">We are glad to hear more comments and suggestions from you! Please rate us and leave your feedback!</string>
    <string name="tv_rate_result">We will make it better!</string>
    <string name="text_skip">skip</string>
    <string name="text_perm_request">Permission Required</string>
    <string name="text_perm_request_desc">Please grant permission to ensure the\nnormal use of these app</string>
    <string name="text_camera_perm">Camera Permission For Flash Light</string>
    <string name="text_mic_perm">Mic Permissions For Detect Claps</string>
    <string name="text_grant">GRANT</string>
    <string name="text_tap_to_active">Tap To Active</string>
    <string name="text_tap_to_deactive">Tap To Deactive</string>
    <string name="text_service_running">Phone Position Finder is running</string>
    <string name="text_alarm_close">Press button to stop alarm</string>
    <string name="text_deactive">Deactive</string>
    <string name="text_stop">Stop</string>
    <string name="text_flashlight">Flashlight</string>
    <string name="text_vibration">Vibration</string>
    <string name="text_sound">Sound</string>
    <string name="text_volume">Volume</string>
    <string name="text_sensitivity">Sensitivity</string>
    <string name="text_duration">Duration</string>
    <string name="text_second_15">15s</string>
    <string name="text_second_30">30s</string>
    <string name="text_minute_1">1m</string>
    <string name="text_minute_2">2m</string>
    <string name="text_apply">Apply</string>
    <string name="text_default">Default</string>
    <string name="text_disco">Disco</string>
    <string name="text_sos">SOS</string>
    <string name="text_strong">Strong</string>
    <string name="text_heartbeat">Heartbeat</string>
    <string name="text_tick_tock">Tick Tock</string>
    <string name="text_other">Other</string>
    <string name="text_rate_us">Rate Us</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_rate_title">Please Rate us!</string>
    <string name="text_rate_desc">We are glad to hear more comments and suggestions from you! Please rate us and leave your feedback!</string>
    <string name="text_how_to_use">How to use</string>
    <string name="text_how_to_use_title">Help you find your phone by clap!</string>
    <string name="text_use_str_1">Click Tap To Activate</string>
    <string name="text_use_str_2">Double clap when you can’t find your phone</string>
    <string name="text_use_str_3">The app will detect the clapping sound and start ringing</string>
    <string name="text_use_str_4">Before activating, you can set the flashlight mode, the volume, and sound effects</string>
    <string name="text_tool_flash_desc">Strobe Light Selection</string>
    <string name="text_tool_screen_title">Screen Blinking</string>
    <string name="text_tool_screen_desc">Attract Someone\'s Attention</string>
    <string name="text_flash_blinks">Flash Blinks</string>
    <string name="text_mode_sos">Mode Sos</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_brightness">Brightness</string>
    <string name="text_speed">Speed</string>
    <string name="text_background_color">Background Color</string>
    <string name="screen_blinging">Screen Blinking</string>
    <string name="strobe_light_selection">Strobe Light Selection</string>
    <string name="attract_someone_attention">Attract Someone\'s Attention</string>
    <string name="htu_desc1">Click tap to activate</string>
    <string name="htu_desc2">Double clap when you can\’t find your phone</string>
    <string name="htu_desc3">The app will detect the clapping sound and start ringing</string>
    <string name="htu_desc4">Before activating, you can set the flashlight mode, the volume, and sound effects</string>

    <!-- 声音名称 -->
    <string name="cuckoo_call">Cuckoo Call</string>
    <string name="kitten_meow">Kitten Meow</string>
    <string name="puppy_bark">Puppy Bark</string>
    <string name="oriole_sing">Oriole Sing</string>
    <string name="duck_call">Duck Call</string>
    <string name="trumpet">Trumpet</string>
    <string name="music">Music</string>
    <string name="doorbell">Doorbell</string>
    <string name="game_console">Game Console</string>
    <string name="wind_chimes">Wind Chimes</string>
    <string name="whistle">Whistle</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="hello">Hello</string>
    <string name="police_car">Police Car</string>
    <string name="firecrackers">Firecrackers</string>

    <!-- alarm -->
    <string name="gunshots">Gunshots</string>
    <string name="electric_shock">Electric Shock</string>
    <string name="blasting">Blasting</string>
    <string name="air_raid_siren">Air Raid Siren</string>
    <string name="fire_alarm">Fire Alarm</string>
    <string name="didi_warning">Didi Warning</string>
    <string name="tsunami">Tsunami</string>
    <string name="burglar_alarm">Burglar Alarm</string>

</resources>