<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/bg_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- splash -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/iv_splash_bg"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="66dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/text_main_color"
                android:textSize="24sp"
                android:fontFamily="@font/baloo_b"/>
            
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:trackCornerRadius="3dp"
                app:trackThickness="6dp"
                app:indicatorColor="@color/btn_color"
                app:trackColor="@color/btn_color_20"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="54dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- start -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/iv_splash_icon"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/text_started"
            android:fontFamily="@font/baloo_b"
            android:gravity="center"
            android:layout_marginHorizontal="48dp"
            android:layout_marginBottom="79dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/btn_start"
            app:layout_constraintStart_toStartOf="@id/btn_start"
            app:layout_constraintEnd_toEndOf="@id/btn_start">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text_main_color"
                android:text="@string/text_agree"
                android:fontFamily="@font/baloo_r"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/btn_color"
                android:text="@string/privacy_policy"
                android:fontFamily="@font/baloo_r"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text_main_color"
                android:text="@string/text_split_privacy_service"
                android:fontFamily="@font/baloo_r"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/btn_color"
                android:text="@string/terms_of_service"
                android:fontFamily="@font/baloo_r"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>