<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_main_color">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tabs_main_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/tabs_main_bottom"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/page_main_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/container_tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/tab_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:clickable="false"
                android:checked="false"
                android:background="@drawable/selector_tab_background"
                android:layout_gravity="center"
                android:drawableTop="@drawable/tab_drawable_home"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/text_home"
                android:textSize="11sp"
                android:fontFamily="@font/baloo_m"
                android:paddingHorizontal="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:textColor="@drawable/selector_main_tab_text" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/container_tab_alarm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/tab_alarm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:clickable="false"
                android:checked="false"
                android:background="@drawable/selector_tab_background"
                android:layout_gravity="center"
                android:drawableTop="@drawable/tab_drawable_alarm"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/text_alarm"
                android:textSize="11sp"
                android:fontFamily="@font/baloo_m"
                android:paddingHorizontal="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:textColor="@drawable/selector_main_tab_text" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/container_tab_tool"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/tab_tool"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:clickable="false"
                android:checked="false"
                android:background="@drawable/selector_tab_background"
                android:layout_gravity="center"
                android:drawableTop="@drawable/tab_drawable_tool"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/text_tool"
                android:textSize="11sp"
                android:fontFamily="@font/baloo_m"
                android:paddingHorizontal="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:textColor="@drawable/selector_main_tab_text" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/container_tab_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/tab_setting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:clickable="false"
                android:checked="false"
                android:background="@drawable/selector_tab_background"
                android:layout_gravity="center"
                android:drawableTop="@drawable/tab_drawable_setting"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/text_setting"
                android:textSize="11sp"
                android:fontFamily="@font/baloo_m"
                android:paddingHorizontal="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:textColor="@drawable/selector_main_tab_text" />
        </FrameLayout>
    </RadioGroup>

    <!-- loading -->
    <include
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/layout_view_loading"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>